fix mobile btn z-index

--- a/src/styles/app/app.css
+++ b/src/styles/app/app.css
@@ -20,6 +20,7 @@ body {
   font-optical-sizing: auto;
   font-weight: <weight>;
   font-style: normal;
+  position: relative;
 }
 
 .app {
